Provide refresh token on signup
